--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,20 +1,13 @@
 {
   "version": 2,
-  "rewrites": [{"source": "/(.*)", "destination": "/api"}],
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/build" }
-    },
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/server.js" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+    { "src": "/(.*)", "dest": "/" }
   ],
   "headers": [
     {
@@ -28,3 +21,4 @@
     }
   ]
 }
+
